2006-09-11  Richard Levitte  <richard@levitte.org>

	* po/sv.po: 2 fuzzies.

2006-09-09  Benoît Dejean  <benoit@placenet.org>

	* fr.po: Updated French translation.

2006-09-09  Nathaniel Smith  <njs@pobox.com>

	* cmd_merging.cc (pluck): Error out if there is no work to be
	done, or if the merge resulting in no changes to be applied.
	* tests/pluck_restricted/__driver__.lua: Test for this.

2006-09-08  Grahame Bowland  <grahame@angrygoats.net>

	* basic_io.hh (basic_io::printer):
	note that only one printer can be referenced at a time, 
	due to shared static buffer.
	* basic_io.cc (basic_io::printer::printer, 
	basic_io::printer::~printer): add reference tracking, 
	and invariant if more than one printer referenced at a time.

2006-09-08  Alex Queiroz  <alex@ventonegro.org>

	* po/pt_BR.po: 8 fuzzies, 4 new strings.

2006-09-08  Grahame Bowland  <grahame@angrygoats.net>

	* automate.cc (get_corresponding_path, get_content_changed):
	fix output; roster information was being written to 
	basic_io::printer mysteriously. Tests now pass.
	* testsuite.lua: remove second reference to 
	automate_get_corresponding_path test

2006-09-07  Nathaniel Smith  <njs@pobox.com>

	* tests/basic_invocation_and_options: Fix test broken by
	usage to stdout vs. stderr changes.

2006-09-07  Nathaniel Smith  <njs@pobox.com>

	* contrib/monotone.el (monotone-vc-prefix-map): Add some more
	intuitive keys, and some more notes on FIXMEs.

2006-09-07  Nathaniel Smith  <njs@pobox.com>

	* numeric_vocab.hh (widen): Add a comment documenting what widen<>
	is for.  Add a fast-path to it for when V is unsigned anyway.
	Throw in some static stdint-actually-works tests too, while I'm,
	here.
	* numeric_vocab.cc, unit_tests.{hh,cc}: Add tests for widen.

2006-09-07  Grahame Bowland  <grahame@angrygoats.net>

	* monotone.texi: add *-merge documentation sourced 
	from mailing list archives (new entry under "Special 
	"Topics").

2006-09-07  Richard Levitte  <richard@levitte.org>
