@@ -519,13 +519,23 @@ apidocs:
 	cmp -s $@.tmp $@ || mv -f $@.tmp $@
 	rm -f $@.tmp
 
-# A fake target so we can use _MTN/revision as a prerequisite, yet not
-# crash if _MTN/revision does not exist.
-$(srcdir)/_MTN/revision:
-	true
-package_revision.txt: $(srcdir)/_MTN/revision
-	if [ -f $< ]; then cp $< $@; fi
-	if [ ! -f $@ ]; then echo "unknown" > $@; fi
+# This is phony, so that we always try to rebuild it.  If it succeeds
+# in calculating changes, it produces its target; otherwise, its
+# target does not exist.
+.PHONY: package_revision_raw.txt
+# if both attempts fail, then we need to remove the empty file that >
+# creates, and also make sure that the shell command exits
+# successfully; the rm -f ensures both
+package_revision_raw.txt:
+	REAL_BLDDIR=$$PWD/$(top_builddir); \
+	(cd $(srcdir) && $$REAL_BLDDIR/mtn --root=. automate get_base_revision_id) 2>/dev/null >$@ \
+	|| (cd $(srcdir) && mtn --root=. automate get_base_revision_id) 2>/dev/null >$@ \
+	|| rm -f $@
+package_revision.txt: package_revision_raw.txt
+	if [ -f $< ]; then \
+	  cp $< $@; \
+	fi
+	[ -f $@ ] || echo "unknown" > $@
 package_revision.c: package_revision.txt txt2c Makefile
 	./txt2c --strip-trailing --no-static $< package_revision >$@.tmp
 	cmp -s $@.tmp $@ || mv -f $@.tmp $@
@@ -540,14 +550,9 @@ package_revision.c: package_revision.txt txt2c Makefile
 #              |           /        
 #          package_full_revision.txt
 
-# This is phony, so that we always try to rebuild it.  If it succeeds
-# in calculating changes, it produces its target; otherwise, its
-# target does not exist.
+# See above comment.
 .PHONY: package_full_revision_raw.txt
 package_full_revision_raw.txt:
-# if both attempts fail, then we need to remove the empty file that >
-# creates, and also make sure that the shell command exits
-# successfully; the rm -f ensures both
 	REAL_BLDDIR=$$PWD/$(top_builddir); \
 	(cd $(srcdir) && $$REAL_BLDDIR/mtn --root=. automate get_revision) 2>/dev/null >$@ \
 	|| (cd $(srcdir) && mtn --root=. automate get_revision) 2>/dev/null >$@ \
